hphp/hack/test/typecheck/constructor_method_call.php.exp
File "constructor_method_call.php", line 9, characters 10-9:
Method call following immediate constructor call requires parentheses around constructor call. (Parsing[1002])
